<resources>
    <string name="app_name">StartER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart ER</string>
    <string name="nav_header_subtitle">Welcome to use SmartER service</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="access_token">HqENWLsTVnZCbCt0w8oWyn7NsAK7zVxp</string>
    <string name="text_login_username">User name</string>
    <string name="login_username_hint">User name</string>
    <string name="login_pwd_hint">Password</string>
    <string name="login_confirm_pwd_hint">Type in password again</string>
    <string name="sign_in_title">Sign In</string>
    <string name="personal_info_title">Personal Information</string>
    <string name="account_info_title">Account Information</string>
    <string name="register_title">Create a new account</string>
    <string name="big_title_login">Smart Energy</string>
    <string name="register_firstname">First name</string>
    <string name="register_surename">Sure name</string>
    <string name="register_address">Address</string>
    <string name="register_postcode">Postcode</string>
    <string name="register_phone">Phone</string>
    <string name="register_email">Email</string>
    <string name="register_birthday">Date of birth</string>
    <string name="register_username">User name</string>
    <string name="register_first_name_empty_msg">First name cannot be empty</string>
    <string name="register_sure_name_empty_msg">Sure name cannot be empty</string>
    <string name="register_dob_empty_msg">Date of birth cannot be empty</string>
    <string name="register_dob_format_msg">Date of birth cannot be in the future.</string>
    <string name="register_address_empty_msg">Address cannot be empty</string>
    <string name="register_postcode_empty_msg">Postcode cannot be empty</string>
    <string name="register_phone_empty_msg">Phone cannot be empty</string>
    <string name="register_email_empty_msg">Email cannot be empty</string>
    <string name="register_email_format_msg">Email format is wrong. Must contain at least 1 \'@\' and end with \'.\' following by domain</string>
    <string name="register_email_exist_msg">User with same email already exist. Please change another email.</string>
    <string name="register_resident_number_empty_msg">No. of resident cannot be empty</string>
    <string name="register_energy_provider_empty_msg">Energy provider cannot be empty</string>
    <string name="register_username_empty_msg">User name cannot be empty</string>
    <string name="register_username_exist_msg">User with same user name already exist. Please change another email.</string>
    <string name="register_pwd_empty_msg">Password cannot be empty</string>
    <string name="register_pwd_format_msg">Password at least has 8 length. Contains at least 1 special character, 1 lower and upper letter, and 1 number</string>
    <string name="register_confirm_pwd_msg">Confirm is different with password</string>
    <string name="welcome">Welcome </string>
    <string name="positive_msg">Good Job! Keep doing that.</string>
    <string name="negative_msg">Keep improving, Dude!</string>
    <string name="pie_chart_date_selector">Select a date</string>

    <string-array name="map_view_type_array">
        <item>daily</item>
        <item>hourly</item>
    </string-array>

    <string-array name="register_number_of_register">
        <item>No. of resident</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="register_energy_provider">
        <item>Energy provider</item>
        <item>Red Energy</item>
        <item>AGL</item>
        <item>Alinta Energy</item>
        <item>Powershop</item>
        <item>QEnergy</item>
    </string-array>
</resources>
