<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_title"
            android:textColor="#000000"
            android:textStyle="bold"
            android:fontFamily="@string/style_satellite"
            android:textSize="15pt"
            android:padding="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000"/>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:padding="10dp">

            <TableRow>
                <EditText
                    android:id="@+id/register_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_firstname"
                    android:layout_column="1" />
            </TableRow>

            <TableRow>
                <EditText
                    android:id="@+id/register_surename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_surename"
                    android:layout_column="1" />
            </TableRow>

            <TableRow>
                <EditText
                    android:id="@+id/Birthday"
                    android:clickable="true"
                    android:inputType="date"
                    android:focusable="false"
                    android:hint="@string/register_birthday"
                    android:layout_column="1" />
            </TableRow>

            <TableRow>
                <EditText
                    android:id="@+id/register_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_address"
                    android:layout_column="1" />
            </TableRow>

            <TableRow>
                <EditText
                    android:id="@+id/register_postcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_postcode"
                    android:layout_column="1" />
            </TableRow>

            <TableRow>
                <EditText
                    android:id="@+id/register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/register_phone"
                    android:layout_column="1" />
            </TableRow>

            <TableRow>
                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/register_email"
                    android:layout_column="1" />
            </TableRow>

            <TableRow>
                <Spinner
                    android:id="@+id/register_number_of_resident"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/register_number_of_resident"
                    android:layout_column="1"
                    android:entries="@array/register_number_of_register">
                </Spinner>
            </TableRow>

            <TableRow>
                <Spinner
                    android:id="@+id/register_energy_provider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/register_number_of_resident"
                    android:layout_column="1"
                    android:entries="@array/register_energy_provider">
                </Spinner>
            </TableRow>

        </TableLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_info_title"
            android:textColor="#000000"
            android:textStyle="bold"
            android:fontFamily="@string/style_satellite"
            android:textSize="15pt"
            android:padding="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000"/>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:padding="10dp">

            <TableRow>
                <EditText
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_username"
                    android:layout_column="1" />
            </TableRow>

            <TableRow>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent"
                    android:layout_column="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_pwd_hint"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>
            </TableRow>

            <TableRow>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent"
                    android:layout_column="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_confirm_pwd_hint"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btn_confirm_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:background="#FF9900"
                    android:layout_marginTop="5dp"
                    android:text="@string/register_title"  />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>